--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,12 +7,13 @@
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="19" />
-    
+
     <uses-permission android:name="android.permission.CAMERA" />
+
     <uses-feature android:name="android.hardware.camera" />
+
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    
 
     <application
         android:allowBackup="true"
@@ -22,15 +23,28 @@
         <activity
             android:name="com.clime_lapse.MainActivity"
             android:label="@string/app_name" >
+           <!--  <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter> -->
+        </activity>
+        <activity
+            android:name="com.clime_lapse.CameraPreviewActivity"
+            android:label="@string/app_name" >
+        </activity>
+         <activity
+            android:name="com.clime_lapse.PhotoIntentc                      Activity"
+            android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name="com.clime_lapse.HomeActivity"
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity
-            android:name="com.clime_lapse.CameraPreviewActivity"
-            android:label="@string/app_name" >           
         </activity>
     </application>
 
